# OpenReplica

./: CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  repo_contents.json  requirements.txt  start.bat  start.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/agenthub/: __init__.py
backend/app/agents/: __init__.py  base.py
backend/app/controller/: __init__.py  agent.py
backend/app/core/: config.py  logging.py
backend/app/events/: __init__.py  action.py  base.py  observation.py  serialization.py
backend/app/integrations/: __init__.py  provider.py  service_types.py
backend/app/llm/: __init__.py  debug_mixin.py  fn_call_converter.py  llm.py  manager.py  metrics.py  retry_mixin.py
backend/app/mcp/: __init__.py  base.py  client.py
backend/app/microagent/: __init__.py  microagent.py  types.py
backend/app/runtime/: __init__.py  base.py  (+1 more)
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
openreplica/: __init__.py  __main__.py  cli.py
openreplica/agents/: __init__.py  base.py  coder.py  manager.py
openreplica/core/: __init__.py  config.py  exceptions.py  logger.py
openreplica/database/: __init__.py  connection.py  conversation.py  session.py
openreplica/events/: __init__.py  base.py  manager.py
openreplica/llm/: __init__.py  manager.py  providers.py
openreplica/models/: __init__.py  base.py  conversation.py  session.py
openreplica/runtime/: __init__.py  docker_runtime.py  manager.py
openreplica/server/: __init__.py  app.py  websocket.py
(+93 files in other folders)
